testdata/baselines/reference/submodule/compiler/checkJsdocTypeTagOnExportAssignment8.errors.txt
a.js(7,12): error TS2304: Cannot find name 'Foo'.


==== a.js (1 errors) ====
    /**
     * @typedef Foo
     * @property {string} a
     * @property {'b'} b
     */
    
    /** @type {Foo} */
               ~~~
!!! error TS2304: Cannot find name 'Foo'.
    export default {
        a: 'a',
        b: 'b'
    }
    